<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<fragment
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ZoomIn = "17"
    tools:context=".MapsActivity" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintBottom_toBottomOf="parent"
        map:layout_constraintEnd_toEndOf="parent"
        android:background="@color/black_transparent"
        android:layout_marginBottom="16dp">
        <Button
            android:id="@+id/btnNormal1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_normal1"
            android:textColor="@color/white"
            android:textAppearance="?attr/textAppearanceCaption"
            style="?attr/materialButtonOutlinedStyle"
            />
        <Button
            android:id="@+id/btnHibrido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/btn_Hibrido"
            android:textColor="@color/white"
            android:textAppearance="?attr/textAppearanceCaption"
            style="?attr/materialButtonOutlinedStyle"
            />
        <Button

            android:id="@+id/btnSatelital"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/btn_Satelital"
            android:textColor="@color/white"
            android:textAppearance="?attr/textAppearanceCaption"
            style="?attr/materialButtonOutlinedStyle"
            />
        <Button
            android:id="@+id/btnTerreno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/btn_Terreno"
            android:textColor="@color/white"
            android:textAppearance="?attr/textAppearanceCaption"
            style="?attr/materialButtonOutlinedStyle"
            />
        <Button
            android:id="@+id/btnNone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/btn_None"
            android:textColor="@color/white"
            android:textAppearance="?attr/textAppearanceCaption"
            style="?attr/materialButtonOutlinedStyle"
            />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabEnabledPosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041"
        tools:srcCompat="@tools:sample/avatars"
        app:srcCompat="@android:drawable/ic_dialog_map"
        app:backgroundTint="#E34A92"/>
</androidx.constraintlayout.widget.ConstraintLayout>